--- a/index.html
+++ b/index.html
@@ -76,36 +76,42 @@
                 <h3 class="section__suptitle">What we do</h3>
                 <h2 class="section__title">Story about us</h2>
                 <div class="section__text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. </p>
                 </div>
             </div>
             <!--./-->
 
-            <div class="about">
-                <div class="about__item">
+            <div class="card">
+                <div class="card__item">
 
-                    <div class="about__img">
+                    <div class="card__img">
                         <img src="images/about/1.jpg" alt="">
                     </div>
-                    <div class="about__text">super team</div>
+                    <div class="card__text">super team</div>
                 </div>
-                <div class="about__item">
-                    <div class="about__img">
+
+                <div class="card__item">
+                    <div class="card__img">
                         <img src="images/about/2.jpg" alt="">
-                        <div class="about__text">super team</div>
                     </div>
+                    <div class="card__text">super team</div>
                 </div>
-                <div class="about__item">
-                    <div class="about__img">
+
+                <div class="card__item">
+                    <div class="card__img">
                         <img src="images/about/3.jpg" alt="">
-                        <div class="about__text">super team</div>
                     </div>
+                    <div class="card__text">super team</div>
                 </div>
             </div>
+
         </div>
-        <!--./-->
+        </div>
+        <!--./card-->
 
 
     </section>
@@ -162,21 +168,24 @@
                     <img class="services__ikon" src="images/Services/1.png" alt="">
 
                     <div class="services__title">Photography</div>
-                    <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    <div class="services__text">Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit, sed do eiusmod
                         tempor.</div>
                 </div>
                 <div class="services__item">
                     <img class="services__ikon" src="images/Services/2.png" alt="">
 
                     <div class="services__title">Web Design</div>
-                    <div class="services__text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    <div class="services__text">Ipsum dolor sit amet, consectetur
+                        adipiscing elit, sed do eiusmod
                         tempor.</div>
                 </div>
                 <div class="services__item">
                     <img class="services__ikon" src="images/Services/3.png" alt="">
 
                     <div class="services__title">Creativity</div>
-                    <div class="services__text">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                    <div class="services__text">Dolor sit amet, consectetur
+                        adipiscing elit, sed do eiusmod tempor.
                     </div>
                 </div>
             </div>
@@ -188,19 +197,22 @@
                     <img class="services__ikon" src="images/Services/4.png" alt="">
 
                     <div class="services__title">SEO</div>
-                    <div class="services__text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</div>
+                    <div class="services__text">Ipsum dolor sit amet, consectetur
+                        adipiscing elit, sed do eiusmod.</div>
                 </div>
                 <div class="services__item">
                     <img class="services__ikon" src="images/Services/5.png" alt="">
 
                     <div class="services__title">Css/Html</div>
-                    <div class="services__text">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</div>
+                    <div class="services__text">Lorem dolor sit amet, consectetur
+                        adipiscing elit, sed do tempor.</div>
                 </div>
                 <div class="services__item">
                     <img class="services__ikon" src="images/Services/6.png" alt="">
 
                     <div class="services__title">digital</div>
-                    <div class="services__text">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
+                    <div class="services__text">Sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor.</div>
                 </div>
             </div>
 
@@ -221,7 +233,8 @@
             <div class="devices">
                 <img class="devices__item" src="images/devices/1ap.png" alt="">
                 <img class="devices__item  devices__item--iphone" src="images/devices/215.png" alt="">
-                <!--придадим модификатор этому <img class="devices__iten" src="images/devices/1111e.png" alt=""> и будет так...-->
+                <!--придадим модификатор этому <img class="devices__iten" 
+                    src="images/devices/1111e.png" alt=""> и будет так...-->
             </div>
 
         </div>
@@ -236,8 +249,10 @@
                 <h3 class="section__suptitle">Service</h3>
                 <h2 class="section__title">what we do</h2>
                 <div class="section__text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. </p>
                 </div>
             </div>
@@ -257,9 +272,12 @@
                                 <div class="accordion__title">Photograph</div>
                             </div>
                             <div class="accordion__content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                                    elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua.
+                                    Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip
+                                    ex ea commodo consequat. </p>
                             </div>
                         </div>
                         <!--./accordion__item-->
@@ -267,12 +285,15 @@
                         <div class="accordion__item active">
                             <div class="accordion__header">
                                 <img class="accordion__icon" src="images/5blok/2c.png" alt="">
-                                <div class="accordion__title">Photograph</div>
+                                <div class="accordion__title">creativity</div>
                             </div>
                             <div class="accordion__content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                                    elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua.
+                                    Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip
+                                    ex ea commodo consequat. </p>
                             </div>
                         </div>
                         <!--./accordion__item-->
@@ -295,6 +316,66 @@
             <!--./wedo-->
 
         </div>
+    </section>
+    <!--новая секция, цвет серый у нее и назовем gray-->
+    <div class="section section--gray">
+        <div class="container">
+            <div class="reviews">
+                <!--отзывы-->
+                <a class="reviews___btn reviews___btn--pref " href="a">Pref</a>
+                <!--две стрелочки, что бы спозиционировать их в разные стороны-->
+                <a class="reviews___btn reviews___btn--next " href="a">Next</a>
+
+                <div class="reviews__item">
+                    <img class="reviews__photo" src="images/5blok/145.jpg" alt="">
+                    <div class="reviews__text">"Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, qui
+                        ex ea commodo consequat."</div>
+                    <div class="reviews__author">Jon Dorc</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--./section--gray-->
+
+    <!--Новая секцмя (Meet our team)-->
+    <section class="section">
+        <div class="container">
+            <!--внутри контейнера создаем шапку,секцию -->
+            <div class="section__header">
+                <h3 class="section__suptitle">Who we are</h3>
+                <h2 class="section__title">Meet our team</h2>
+                <div class="section__text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__item">
+
+                    <div class="card__img">
+                        <img src="images/6blok/1.jpg " alt="">
+                    </div>
+                    <div class="card__text">super team</div>
+                </div>
+                <div class="card__item">
+                    <div class="card__img">
+                        <img src="images/6blok/2.jpg" alt="">
+                        <div class="card__text">super team</div>
+                    </div>
+                </div>
+                <div class="card__item">
+                    <div class="card__img">
+                        <img src="images/6blok/3.jpg" alt="">
+                        <div class="card__text">super team</div>
+                    </div>
+                </div>
+            </div>
     </section>
 
 </body>
