--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&display=swap&subset=cyrillic"
         rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MoGo</title>
@@ -342,42 +343,56 @@
 
     <!--Новая секцмя (Meet our team)-->
     <section class="section">
-        <div class="container">
-            <!--внутри контейнера создаем шапку,секцию -->
-            <div class="section__header">
-                <h3 class="section__suptitle">Who we are</h3>
-                <h2 class="section__title">Meet our team</h2>
-                <div class="section__text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat. </p>
-                </div>
+        div class="container">
+        <!--внутри контейнера создаем шапку,секцию -->
+        <div class="section__header">
+            <h3 class="section__suptitle">Who we are</h3>
+            <h2 class="section__title">Meet our team</h2>
+            <div class="section__text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat. </p>
             </div>
-            <div class="card">
-                <div class="card__item">
+        </div>
+        <!--container-->
+        <div class="card">
+            <div class="card__item">
 
-                    <div class="card__img">
-                        <img src="images/6blok/1.jpg " alt="">
-                    </div>
-                    <div class="card__text">super team</div>
+                <div class="card__img">
+                    <img src="images/6blok/1.jpg " alt="">
                 </div>
-                <div class="card__item">
-                    <div class="card__img">
-                        <img src="images/6blok/2.jpg" alt="">
-                        <div class="card__text">super team</div>
-                    </div>
-                </div>
-                <div class="card__item">
-                    <div class="card__img">
-                        <img src="images/6blok/3.jpg" alt="">
-                        <div class="card__text">super team</div>
-                    </div>
-                </div>
+                <div class="card__ico"><img src="images/6blok/ct.png " alt=""></div>
+
             </div>
+
+
+            <div class="card__item">
+
+                <div class="card__img">
+                    <img src="images/6blok/2.jpg" alt=""></div>
+                <div class="card__ico"><img src="images/6blok/ct.png " alt=""></div>
+
+            </div>
+
+            <div class="card__item">
+
+                <div class="card__img">
+                    <img src="images/6blok/3.jpg" alt=""></div>
+                <div class="card__ico"><img src="images/6blok/ct.png " alt=""></div>
+
+            </div>
+
+
+        </div>
+        <!--/card-->
     </section>
+    <div class="card__info">
+        <div class="card__name">Matthew Dix</div>
+        <div class="card__prof">Graphic Design</div>
 
+    </div>
 </body>
 
 </html>
