добавила блок 6 с изменениями

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&display=swap&subset=cyrillic"
         rel="stylesheet">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MoGo</title>
 </head>
 
 <body>
-
+    <!--1.blok Creative Template-->
     <header class="header">
         <div class="container">
             <div class="header__inner">
@@ -69,8 +68,9 @@
         </div>
     </div>
     <!--/.intro-->
+    <!--./1.blok Creative Template-->
 
-    <!-- НОВЫЙ блог часть 2 -->
+    <!-- 2.blok What we do STORY ABOUT US -->
     <section class="section">
         <div class="container">
             <div class="section__header">
@@ -84,8 +84,8 @@
                         laboris nisi ut aliquip ex ea commodo consequat. </p>
                 </div>
             </div>
-            <!--./-->
-
+            <!--./Первая часть второго блока-->
+            <!--картинки второго блока-->
             <div class="card">
                 <div class="card__item">
 
@@ -114,13 +114,9 @@
         </div>
         <!--./card-->
 
-
     </section>
     <!--/.container -->
-
-    <!--третий блок (секция)-->
-
-
+    <!--(секция)2го блока-->
     <div class="statistics">
         <div class="container">
 
@@ -154,8 +150,9 @@
         </div>
     </div>
     <!--./statistics-->
+    <!--./2.blok What we do STORY ABOUT US-->
 
-
+    <!-- 3.blok We work with AMAZING SERVICES-->
     <section class="section">
         <div class="container">
 
@@ -220,8 +217,10 @@
         </div>
         <!--./container-->
     </section>
+    <!--./3.blok We work with AMAZING SERVICES-->
 
 
+    <!--4.blok For all devices UNIQUE DESIGN-->
     <section class="section  section--devices">
         <!--наз.модефмкатор, когда добавляется другой фон пишется через --, -->
         <div class="container">
@@ -240,9 +239,9 @@
 
         </div>
     </section>
-    <!--./-->
+    <!--./4.blok For all devices UNIQUE DESIGN-->
 
-    <!--новая секция-->
+    <!--5.blok Service WHAT WE DO(новая секция)-->
     <section class="section">
         <div class="container">
 
@@ -340,59 +339,179 @@
         </div>
     </div>
     <!--./section--gray-->
+    <!--./5.blok Service WHAT WE DO-->
 
-    <!--Новая секцмя (Meet our team)-->
+    <!--6.blok Who we are MEET OUR TEAM-->
     <section class="section">
-        div class="container">
-        <!--внутри контейнера создаем шапку,секцию -->
-        <div class="section__header">
-            <h3 class="section__suptitle">Who we are</h3>
-            <h2 class="section__title">Meet our team</h2>
-            <div class="section__text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat. </p>
-            </div>
-        </div>
-        <!--container-->
-        <div class="card">
-            <div class="card__item">
-
-                <div class="card__img">
-                    <img src="images/6blok/1.jpg " alt="">
+        <div class="container">
+            <!--внутри контейнера создаем шапку,секцию -->
+            <div class="section__header">
+                <h3 class="section__suptitle">Who we are</h3>
+                <h2 class="section__title">Meet our team</h2>
+                <div class="section__text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. </p>
                 </div>
-                <div class="card__ico"><img src="images/6blok/ct.png " alt=""></div>
-
             </div>
 
+            <!--container-->
+            <div class="card">
+                <div class="card__item">
+                    <div class="card__inner">
+                        <div class="card__img">
+                            <img src="images/6blok/1.jpg " alt="">
+                        </div>
+                        <div class="card__text">
+                            <div class="social">
+                                <!--social  иконки-->
+                                <a class="social__item" href="a" target="_blank">
+                                    <div>
+                                        <img src="images/6blok/ff.png " alt="">
+                                    </div>
+                                </a>
+                                <a class="social__item" href="a" target="_blank">
+                                    <div>
+                                        <img src="images/6blok/i.png " alt="">
+                                    </div>
+                                </a>
+                                <a class="social__item" href="a" target="_blank">
+                                    <div>
+                                        <img src="images/6blok/p3.png " alt="">
+                                    </div>
+                                </a>
+                                <a class="social__item" href="a" target="_blank">
+                                    <div>
+                                        <img src="images/6blok/t2.png " alt="">
+                                    </div>
+                                </a>
 
-            <div class="card__item">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cart__info">
+                        <div class="cart__name">Matthew Dix</div>
+                        <div class="cart__prof">Graphic Design</div>
+                    </div>
+                </div>
+                <!--card__text-->
 
-                <div class="card__img">
-                    <img src="images/6blok/2.jpg" alt=""></div>
-                <div class="card__ico"><img src="images/6blok/ct.png " alt=""></div>
+                <div class="card__item">
+                    <div class="card__inner">
+                        <div class="card__img">
+                            <img src="images/6blok/2.jpg " alt="">
+                        </div>
+                        <div class="card__text">
+                            <div class="social">
+                                <!--social  иконки-->
+                                <a class="social__item" href="a" target="_blank">
+                                    <div>
+                                        <img src="images/6blok/ff.png " alt="">
+                                    </div>
+                                </a>
+                                <a class="social__item" href="a" target="_blank">
+                                    <div>
+                                        <img src="images/6blok/i.png " alt="">
+                                    </div>
+                                </a>
+                                <a class="social__item" href="a" target="_blank">
+                                    <div>
+                                        <img src="images/6blok/p3.png " alt="">
+                                    </div>
+                                </a>
+                                <a class="social__item" href="a" target="_blank">
+                                    <div>
+                                        <img src="images/6blok/t2.png " alt="">
+                                    </div>
+                                </a>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cart__info">
+                        <div class="cart__name">Christopher Campbell</div>
+                        <div class="cart__prof">Branding/UX design</div>
+                    </div>
+                </div>
+                <!--card__text-->
+
+                <!--container-->
+
+                <div class="card__item">
+                    <div class="card__inner">
+                        <div class="card__img">
+                            <img src="images/6blok/3.jpg " alt="">
+                        </div>
+                        <div class="card__text">
+                            <div class="social">
+                                <!--social  иконки-->
+                                <a class="social__item" href="a" target="_blank">
+                                    <div>
+                                        <img src="images/6blok/ff.png " alt="">
+                                    </div>
+                                </a>
+                                <a class="social__item" href="a" target="_blank">
+                                    <div>
+                                        <img src="images/6blok/i.png " alt="">
+                                    </div>
+                                </a>
+                                <a class="social__item" href="a" target="_blank">
+                                    <div>
+                                        <img src="images/6blok/p3.png " alt="">
+                                    </div>
+                                </a>
+                                <a class="social__item" href="a" target="_blank">
+                                    <div>
+                                        <img src="images/6blok/t2.png " alt="">
+                                    </div>
+                                </a>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!--card__text-->
+                    <div class="cart__info">
+                        <div class="cart__name">Michael Fertig</div>
+                        <div class="cart__prof">Developer</div>
+                    </div>
+                </div>
 
             </div>
-
-            <div class="card__item">
-
-                <div class="card__img">
-                    <img src="images/6blok/3.jpg" alt=""></div>
-                <div class="card__ico"><img src="images/6blok/ct.png " alt=""></div>
-
-            </div>
-
+            <!--./card-->
 
         </div>
-        <!--/card-->
+        <!--./container-->
     </section>
-    <div class="card__info">
-        <div class="card__name">Matthew Dix</div>
-        <div class="card__prof">Graphic Design</div>
 
+    <div class="section--gray">
+        <div class="container">
+
+            <div class="logos">
+                <div class="logos__item">
+                    <img src="images/6blok/a1.png" alt="">
+                </div>
+                <div class="logos__item">
+                    <img src="images/6blok/a2.png" alt="">
+                </div>
+                <div class="logos__item">
+                    <img src="images/6blok/a3.png" alt="">
+                </div>
+                <div class="logos__item">
+                    <img src="images/6blok/a4.png" alt="">
+                </div>
+                <div class="logos__item">
+                    <img src="images/6blok/a5.png" alt="">
+                </div>
+                <div class="logos__item">
+                    <img src="images/6blok/a6.png" alt="">
+                </div>
+            </div>
+
+        </div>
     </div>
+
 </body>
 
 </html>
