--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <!--./Первая часть второго блока-->
             <!--картинки второго блока-->
             <div class="card">
-                <div class="card__item">
+                <div class="card__inner">
 
                     <div class="card__img">
                         <img src="images/about/1.jpg" alt="">
@@ -95,14 +95,14 @@
                     <div class="card__text">super team</div>
                 </div>
 
-                <div class="card__item">
+                <div class="card__inner">
                     <div class="card__img">
                         <img src="images/about/2.jpg" alt="">
                     </div>
                     <div class="card__text">super team</div>
                 </div>
 
-                <div class="card__item">
+                <div class="card__inner">
                     <div class="card__img">
                         <img src="images/about/3.jpg" alt="">
                     </div>
@@ -327,7 +327,7 @@
                 <a class="reviews___btn reviews___btn--next " href="a">Next</a>
 
                 <div class="reviews__item">
-                    <img class="reviews__photo" src="images/5blok/145.jpg" alt="">
+                    <img class="reviews__photo" src="images/7work/w1.png" alt="">
                     <div class="reviews__text">"Lorem ipsum dolor sit amet, consectetur adipiscing
                         elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua.
@@ -511,6 +511,342 @@
 
         </div>
     </div>
+    <!--./-->
+
+    <!--Блок 7-->
+    <section class="section">
+        <div class="container">
+
+            <div class="section__header">
+                <h3 class="section__suptitle">What we do</h3>
+                <h2 class="section__title">some of our works</h2>
+                <div class="section__text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. </p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="works">
+            <!--выносим works за пределы контейнера,Делаем колонки для картинок-->
+            <div class="works__col">
+                <div class="works__item">
+                    <img class="works__image" src="images/7work/26.jpg" alt="">
+                    <div class="works__info">
+                        <div class="works__title">creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor Sit</div>
+                    </div>
+                </div>
+
+                <div class="works__item">
+                    <img class="works__image" src="images/7work/35.jpg" alt="">
+                    <div class="works__info">
+                        <div class="works__title">creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor Sit</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="works__col">
+                <div class="works__item">
+                    <img class="works__image" src="images/7work/33.jpg" alt="">
+                    <div class="works__info">
+                        <div class="works__title">creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor Sit</div>
+                    </div>
+                </div>
+
+                <div class="works__item">
+                    <img class="works__image" src="images/7work/hover.jpg" alt="">
+                    <div class="works__info">
+                        <div class="works__title">creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor Sit</div>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="works__col">
+                <div class="works__item">
+                    <img class="works__image" src="images/7work/b3.jpg" alt="">
+                    <div class="works__info">
+                        <div class="works__title">creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor Sit</div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="works__col">
+                <div class="works__item">
+                    <img class="works__image" src="images/7work/p1.jpg" alt="">
+                    <div class="works__info">
+                        <div class="works__title">creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor Sit</div>
+                    </div>
+                </div>
+
+                <div class="works__item">
+                    <img class="works__image" src="images/7work/32.jpg" alt="">
+                    <div class="works__info">
+                        <div class="works__title">creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor Sit</div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!--./works-->
+    </section>
+
+    <div class="section">
+        <div class="container">
+            <div class="reviews">
+                <!--отзывы-->
+                <a class="reviews___btn reviews___btn--pref " href="a">Pref</a>
+                <!--две стрелочки, что бы спозиционировать их в разные стороны-->
+                <a class="reviews___btn reviews___btn--next " href="a">Next</a>
+
+                <div class="reviews__item">
+                    <img class="reviews__photo" src="images/7work/w1.png" alt="">
+                    <div class="reviews__text">"Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, qui
+                        ex ea commodo consequat."</div>
+                    <div class="reviews__author">Jon Dorc</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--./-->
+
+
+    <!--8 blok создаем новый классификатор section-- Clients-->
+    <section class="section--сlients">
+        <div class="container">
+
+            <div class="section__header">
+                <h3 class="section__suptitle">Happy Clients</h3>
+                <h2 class="section__title">What people say</h2>
+            </div>
+
+            <div class="сlients">
+                <div class="сlients__item">
+                    <img class="clients__photo" src="images/8blok/1.jpg" alt="">
+                    <div class="clients__content">
+                        <div class="clients__name">Matthew Dix</div>
+                        <div class="clients__prof">Graphic Design</div>
+                        <div class="clients__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                            sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.Ut enim ad minim ."</div>
+
+                    </div>
+                </div>
+
+                <div class="сlients__item">
+                    <img class="clients__photo" src="images/8blok/2.jpg" alt="">
+                    <div class="clients__content">
+                        <div class="clients__name">Nick Karvounis</div>
+                        <div class="clients__prof">Graphic Designn</div>
+                        <div class="clients__text">Sit amet, consectetur adipiscing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore
+                            magna aliqua. Ut enim ad minim veniam</div>
+
+                    </div>
+                </div>
+                <div class="сlients__item">
+                    <img class="clients__photo" src="images/8blok/3.jpg" alt="">
+                    <div class="clients__content">
+                        <div class="clients__name">Jaelynn Castillo </div>
+                        <div class="clients__prof">Graphic Design</div>
+                        <div class="clients__text">Ipsum dolor sit amet,
+                            consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua. Ut enim a</div>
+
+                    </div>
+                </div>
+                <div class="сlients__item">
+                    <img class="clients__photo" src="images/8blok/4.jpg" alt="">
+                    <div class="clients__content">
+                        <div class="clients__name">Mike Petrucci</div>
+                        <div class="clients__prof">Graphic Design</div>
+                        <div class="clients__text">Dolor sit amet, consectetur adipiscing elit,
+                            sed do eiusmod tempor incididunt ut labore et
+                            dolore magna aliqua. Ut enim ad minim.</div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <!--сlients-->
+        <!--./container-->
+    </section>
+
+    <!--9blok Latest BLOG-->
+
+    <section class="section">
+        <div class="container">
+
+            <div class="section__header">
+                <h3 class="section__suptitle">Our stories</h3>
+                <h2 class="section__title">Latest blog</h2>
+            </div>
+
+            <div class="blog">
+                <div class="blog__item">
+                    <div class="blog__header">
+                        <a href="#">
+                            <img class="blog__photo" src="images/9blok/1.jpg" alt="">
+                        </a>
+                        <div class="blog__date">
+                            <div class="blog__date-day">15</div>
+                            Jan
+                        </div>
+                    </div>
+                    <div class="blog__content">
+                        <div class="blog__title">
+                            <a href="#">Lorem ipsum dolor sit amet</a>
+                        </div>
+                        <div class="blog__text">Consectetur adipiscing elit,
+                            sed do eiusmod tempor incididunt u....</div>
+                    </div>
+                    <div class="blog__footer">
+                        <div class="blog-stat">
+                            <span class="blog-stat__item">
+                                <img src="images/9blok/9b1.png" alt=""> 542</span>
+                            <span class="blog-stat__item">
+                                <img src="images/9blok/9b3.png" alt="">17</span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="blog__item">
+                    <div class="blog__header">
+                        <a href="#">
+                            <img class="blog__photo" src="images/9blok/2.jpg" alt="">
+                        </a>
+                        <div class="blog__date">
+                            <div class="blog__date-day">15</div>
+                            Jan
+                        </div>
+                    </div>
+                    <div class="blog__content">
+                        <div class="blog__title">
+                            <a href="#">Lorem ipsum dolor sit amet</a>
+                        </div>
+                        <div class="blog__text">Consectetur adipiscing elit,
+                            sed do eiusmod tempor incididunt u....</div>
+                    </div>
+                    <div class="blog__footer">
+                        <div class="blog-stat">
+                            <span class="blog-stat__item">
+                                <img src="images/9blok/9b1.png" alt=""> 542</span>
+                            <span class="blog-stat__item">
+                                <img src="images/9blok/9b3.png" alt="">17</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="blog__item">
+                    <div class="blog__header">
+                        <a href="#">
+                            <img class="blog__photo" src="images/9blok/3.jpg" alt="">
+                        </a>
+                        <div class="blog__date">
+                            <div class="blog__date-day">15</div>
+                            Jan
+                        </div>
+                    </div>
+                    <div class="blog__content">
+                        <div class="blog__title">
+                            <a href="#">Lorem ipsum dolor sit amet</a>
+                        </div>
+                        <div class="blog__text">Consectetur adipiscing elit,
+                            sed do eiusmod tempor incididunt u....</div>
+                    </div>
+                    <div class="blog__footer">
+                        <div class="blog-stat">
+                            <span class="blog-stat__item">
+                                <img src="images/9blok/9b1.png" alt=""> 542</span>
+                            <span class="blog-stat__item">
+                                <img src="images/9blok/9b3.png" alt="">17</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--/.blog-->
+
+        </div>
+        <!--container-->
+    </section>
+    <!--/.-->
+
+    <!--Open map-->
+    <section class="section section--map">
+        <div class="container">
+            <div class="map">
+                <h2 class="map__title">
+                    <div><img src="images/9blok/ic.png" alt=""></div>
+                    <a href="https://goo.gl/maps/cEdKtkDt6SWsNuns9" target="_blank"> Open Map</a>
+                    <!--target="_blank чтобы открывалось в новом окне-->
+                </h2>
+            </div>
+        </div>
+
+    </section>
+    <!--/.Open map-->
+
+
+    <!--blok footor -->
+    <footor class="footor">
+        <div class="container">
+            <div class="footor__inner">
+                <div class="footor__col">
+                    <div class="footor__logo">MoGo</div>
+                    <div class="footor__text">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, qui
+                        ex ea commodo consequat.</div>
+                    <div class="footor__social">
+                        <div class="footor__social-header">
+                            <b>15k</b> followers
+                        </div>
+                        <div class="footor__social-content">
+                            follow Us
+                            <a href="#">
+                                <i class="image">
+                                    <img src="images/footor/footor.png" alt="">
+                                </i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!--делаем форму с классом Subscribe-->
+                    <form class="Subscribe" action="/" method="post">
+                        <input class="Subscribe__input" type="email" name="name" placeholder="Your Email...">
+                        <button class="Subscribe__btn" type="submit">Subscribe</button>
+
+                    </form>
+                </div>
+
+            </div>
+            <!--/.footor__inner-->
+
+
+        </div>
+        <!--/.container-->
+    </footor>
+
+
 
 </body>
 
