--- a/index.html
+++ b/index.html
@@ -808,14 +808,17 @@
     <!--blok footor -->
     <footor class="footor">
         <div class="container">
+
             <div class="footor__inner">
-                <div class="footor__col">
-                    <div class="footor__logo">MoGo</div>
+                <div class="footor__col  footer__col--first">
+                    <!--добавим модификатор footer__col--first-->
+                    <div class=" footor__logo">MoGo</div>
                     <div class="footor__text">Lorem ipsum dolor sit amet, consectetur adipiscing
                         elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua.
                         Ut enim ad minim veniam, qui
                         ex ea commodo consequat.</div>
+
                     <div class="footor__social">
                         <div class="footor__social-header">
                             <b>15k</b> followers
@@ -830,12 +833,24 @@
                         </div>
                     </div>
 
+
                     <!--делаем форму с классом Subscribe-->
                     <form class="Subscribe" action="/" method="post">
                         <input class="Subscribe__input" type="email" name="name" placeholder="Your Email...">
                         <button class="Subscribe__btn" type="submit">Subscribe</button>
 
                     </form>
+                </div>
+                <!--footor__col-->
+
+                <div class="footor__col footer__col--first">1</div>
+
+                <div class="footor__col footer__col--second">
+                    <div class="footer__title">blogs</div>
+                </div>
+
+                <div class="footor__col footer__col--third">
+                    <div class="Footer__title">instagram</div>
                 </div>
 
             </div>
